--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/vehicle_parker
 spring.datasource.username=root
 spring.datasource.password=Root@2020
+
+#flyway config
+spring.flyway.enabled=true
+flyway.url = jdbc:mysql://localhost:3306/mysql
+flyway.schemas = vehicle_parker
+flyway.user = root
+flyway.password = Root@2020
+spring.flyway.baseline-on-migrate = true
