flyway tables created, data inserted

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/vehicle_parker
 spring.datasource.username=root
 spring.datasource.password=Root@2020
@@ -10,3 +10,6 @@ flyway.schemas = vehicle_parker
 flyway.user = root
 flyway.password = Root@2020
 spring.flyway.baseline-on-migrate = true
+
+#to handle vehicle_parker.hibernate_sequence not found exception
+spring.jpa.hibernate.use-new-id-generator-mappings= false
