flyway migration added for tests. problems in deleteing level and adding level solved

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,7 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.hibernate.ddl-auto=update
+flyway.url=jdbc:h2:mem:testdb
+spring.flyway.baseline-on-migrate = true
+spring.flyway.enabled=true
+#to handle vehicle_parker.hibernate_sequence not found exception
+spring.jpa.hibernate.use-new-id-generator-mappings= false
