--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 flyway.url=jdbc:h2:mem:testdb
